# smart-internship-platform-main

./: .gitignore  README.md  start.bat
backend/: .env  .env.example  pyproject.toml  smart.db  smart.db.bak
backend/app/: main.py
backend/app/api/: deps.py  schemas.py
backend/app/api/v1/: admin.py  analytics.py  applications.py  auth.py  companies.py  internships.py  recommendations.py  students.py  universities.py
backend/app/core/: config.py  exceptions.py  rate_limit.py  security.py
backend/app/infra/db/: models.py  session.py
backend/app/infra/seed/: seeder.py
backend/app/infra/seed/data/: companies_jo.json  universities_jo.json
backend/app/ml/: matcher.py
backend/app/services/: mailer.py
frontend/: package-lock.json  package.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/applications/: loading.tsx  page.tsx
frontend/src/app/companies/: loading.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  loading.tsx  page.tsx
frontend/src/app/internships/: loading.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/map/: page.tsx
frontend/src/app/partners/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/saved/: page.tsx
frontend/src/components/admin/: AdminTable.tsx
frontend/src/components/dashboard/: ProfileCompleteness.tsx
frontend/src/components/hero/: Hero.tsx  HeroScene.tsx
frontend/src/lib/: api.ts  auth-store.ts  i18n.ts  saved-store.ts  types.ts  utils.ts
(+33 files in other folders)
