[project]
name = "smart-internship-backend"
version = "0.1.0"
description = "Smart Internship Platform - FastAPI backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlmodel>=0.0.22",
  "aiosqlite>=0.20",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "passlib[bcrypt]>=1.7.4",
  "python-jose[cryptography]>=3.3",
  "python-multipart>=0.0.9",
  "scikit-learn>=1.5",
  "numpy>=1.26",
  "pandas>=2.2",
  "httpx>=0.27",
  "email-validator>=2.2",
  "slowapi>=0.1.9"
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py310"
